--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ article {
 
 section.first {
   height: calc(100vh - 70px);
-  padding: 60px 30px;
+  padding: 130px 30px 0 30px;
 }
 section.first .text {
   text-align: center;
