--- a/scss/style.scss
+++ b/scss/style.scss
@@ -199,7 +199,7 @@ article {
 
 section.first {
   height: calc(100vh - 70px);
-  padding: 60px 30px;
+  padding: 130px 30px 0 30px;
 
   .text {
     text-align: center;
