--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,9 @@ nav ul li ul li a {
 
 @media only screen and (max-width: 850px) {
   .nav-bar {
+    position: absolute;
+    width: 100%;
+    z-index: 10;
     padding: inherit;
     transition: height 300ms ease-in-out;
   }
