height section first

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -201,8 +201,8 @@ article {
 
 
 section.first {
-  height: calc(100vh - 70px);
-  padding: 130px 30px 0 30px;
+  height: 100vh;
+  padding: 130px 30px 30px 30px;
 
   .text {
     text-align: center;
