--- a/css/style.css
+++ b/css/style.css
@@ -216,8 +216,8 @@ article {
 }
 
 section.first {
-  height: calc(100vh - 70px);
-  padding: 130px 30px 0 30px;
+  height: 100vh;
+  padding: 130px 30px 30px 30px;
 }
 section.first .text {
   text-align: center;
