--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ nav ul li ul li a {
 
 @media only screen and (max-width: 850px) {
   .nav-bar {
-    position: absolute;
+    position: fixed;
     width: 100%;
     z-index: 10;
     padding: inherit;
@@ -274,6 +274,50 @@ section.second .title .trait-deco {
 section.second .title h2 {
   margin: 0 15px;
   font-weight: bold;
+}
+section.second .cards {
+  margin: 20px 0;
+}
+section.second .cards .card-projet {
+  background-color: #FBFBFB;
+  border-radius: 5px;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+section.second .cards .card-projet .image {
+  height: 50%;
+}
+section.second .cards .card-projet .image img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 5px 5px 0 0;
+  height: 100%;
+}
+section.second .cards .card-projet .infos {
+  padding: 15px;
+  color: #151414;
+}
+section.second .cards .card-projet .infos .title-projet {
+  font-weight: bold;
+  font-size: 1.5rem;
+  text-align: left;
+}
+section.second .cards .card-projet .infos .description-projet {
+  text-align: left;
+}
+section.second .cards .card-projet .infos .cta {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+section.second .cards .card-projet .infos .cta .cta-voir-projet {
+  padding: 5px 20px;
+  border-radius: 5px;
+  border: none;
+  color: #FBFBFB;
+  background-color: #151414;
 }
 
 /*# sourceMappingURL=style.css.map */
