--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ section.second .cards {
 section.second .cards .card-projet {
   background-color: #FBFBFB;
   border-radius: 5px;
-  height: 50vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
