--- a/scss/style.scss
+++ b/scss/style.scss
@@ -288,6 +288,7 @@ section.second {
       display: flex;
       flex-direction: column;
       margin-bottom: 30px;
+      box-shadow: 5px 5px $secondary-beige;
 
       .image {
         height: 50%;
