--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
   color: #FBFBFB !important;
 }
 
+.disable-home-scroll {
+  overflow: hidden;
+}
+
 * {
   font-family: "Roboto Condensed", sans-serif;
 }
@@ -15,6 +19,11 @@ body {
   height: 70px;
   background: #2A2828;
   padding: 0 20px;
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  padding: inherit;
+  transition: height 300ms ease-in-out;
 }
 
 .brand {
@@ -105,14 +114,6 @@ nav ul li ul li a {
 }
 
 @media only screen and (max-width: 850px) {
-  .nav-bar {
-    position: fixed;
-    width: 100%;
-    z-index: 10;
-    padding: inherit;
-    transition: height 300ms ease-in-out;
-  }
-
   .full-height-nav {
     height: 100vh;
     transition: height 300ms ease-in-out;
@@ -120,6 +121,8 @@ nav ul li ul li a {
 
   .nav-list {
     padding: 40px 0;
+    height: calc(100vh - 70px);
+    overflow: scroll;
   }
 
   .nav-mobile {
@@ -277,6 +280,9 @@ section.second .title h2 {
 }
 section.second .cards {
   margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 section.second .cards .card-projet {
   background-color: #FBFBFB;
@@ -284,8 +290,8 @@ section.second .cards .card-projet {
   min-height: 50vh;
   display: flex;
   flex-direction: column;
-  margin-bottom: 30px;
   box-shadow: 5px 5px #C0B187;
+  flex: 1;
 }
 section.second .cards .card-projet .image {
   height: 50%;
@@ -299,6 +305,10 @@ section.second .cards .card-projet .image img {
 section.second .cards .card-projet .infos {
   padding: 15px;
   color: #151414;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 section.second .cards .card-projet .infos .title-projet {
   font-weight: bold;
@@ -308,6 +318,11 @@ section.second .cards .card-projet .infos .title-projet {
 section.second .cards .card-projet .infos .description-projet {
   text-align: left;
   font-size: 0.85rem;
+  overflow: hidden;
+  margin-bottom: 1rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
 }
 section.second .cards .card-projet .infos .cta {
   display: flex;
@@ -320,6 +335,20 @@ section.second .cards .card-projet .infos .cta .cta-voir-projet {
   border: none;
   color: #FBFBFB;
   background-color: #151414;
+}
+
+@media only screen and (min-width: 780px) {
+  section.second .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  section.second .cards .card-projet {
+    min-height: 430px;
+    height: 430px;
+  }
+  section.second .cards .card-projet .description-projet {
+    -webkit-line-clamp: 4 !important;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
