--- a/scss/style.scss
+++ b/scss/style.scss
@@ -280,6 +280,7 @@ section.second {
     h2 {
       margin: 0 15px;
       font-weight: bold;
+      font-size: 1.8rem;
     }
   }
 
@@ -383,6 +384,7 @@ section.third {
 
       h2 {
         font-weight: bold;
+        font-size: 1.8rem;
         
       }
     }
