--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,14 @@ section.third .background .cta .cta-decouvrir {
 }
 
 section.fourth {
-  margin: 70px 0;
+  margin: 70px 30px;
+}
+section.fourth .description {
+  text-align: center;
+  margin: 20px 0;
+}
+section.fourth .description h2 {
+  font-size: 1rem;
 }
 
 @media only screen and (min-width: 780px) {
