--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,25 @@ section.fourth .description {
 section.fourth .description h2 {
   font-size: 1rem;
 }
+section.fourth .carousel-photos {
+  scrollbar-width: none;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 70vw;
+  grid-gap: 0 30px;
+  justify-content: space-between;
+  cursor: pointer;
+  scroll-snap-type: none;
+  scroll-padding: 1rem;
+}
+section.fourth .carousel-photos img {
+  scroll-snap-align: center;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
 
 @media only screen and (min-width: 780px) {
   section.second .cards {
