--- a/scss/style.scss
+++ b/scss/style.scss
@@ -426,6 +426,27 @@ section.fourth {
       font-size: 1rem;
     }
   }
+
+  .carousel-photos {
+    scrollbar-width: none;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 70vw;
+    grid-gap: 0 30px;
+    justify-content: space-between;
+    cursor: pointer;
+    scroll-snap-type: none;
+    scroll-padding: 1rem;
+
+    img {
+      scroll-snap-align: center;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
 
 
