--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,11 @@ body {
 }
 
 .nav-bar {
-  height: 70px;
+  height: 76px;
   background: #2A2828;
   padding: 0 20px;
   position: fixed;
-  z-index: 10;
+  z-index: 1;
   width: 100%;
   padding: inherit;
   transition: height 300ms ease-in-out;
@@ -47,7 +47,7 @@ body {
 
 .nav-container {
   max-width: 1400px;
-  margin: 0 auto;
+  margin: 6px auto 0 auto;
 }
 
 nav {
@@ -222,6 +222,16 @@ article {
   overflow: hidden;
 }
 
+#progress {
+  background-color: #C0B187;
+  height: 6px;
+  width: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
 section.second .title, section.fourth .title {
   text-align: center;
   text-transform: uppercase;
@@ -239,11 +249,16 @@ section.second .title h2, section.fourth .title h2 {
 }
 
 section.first {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   padding: 130px 30px 30px 30px;
 }
 section.first .text {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 section.first .text .color-txt {
   color: #C0B187;
@@ -264,6 +279,7 @@ section.first .photo {
   align-items: center;
   width: 60vw;
   margin: 30px auto;
+  justify-content: center;
 }
 section.first .photo img {
   width: 100%;
@@ -399,23 +415,24 @@ section.fourth .description h2 {
   font-size: 1rem;
 }
 section.fourth .carousel-photos {
-  scrollbar-width: none;
+  display: flex;
   overflow-x: scroll;
-  overflow-y: hidden;
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: 70vw;
-  grid-gap: 0 30px;
-  justify-content: space-between;
-  cursor: pointer;
-  scroll-snap-type: none;
-  scroll-padding: 1rem;
+  padding: 24px;
+  scroll-snap-type: x mandatory;
+  gap: 20px;
 }
-section.fourth .carousel-photos img {
-  scroll-snap-align: center;
+section.fourth .carousel-photos .image {
+  flex: 0 0 100%;
+  scroll-snap-align: start;
+}
+section.fourth .carousel-photos .image img {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+section.footer {
+  text-align: center;
 }
 
 @media only screen and (min-width: 780px) {
@@ -429,6 +446,12 @@ section.fourth .carousel-photos img {
   }
   section.second .cards .card-projet .description-projet {
     -webkit-line-clamp: 4 !important;
+  }
+}
+@media only screen and (min-width: 850px) {
+  section.first {
+    flex-direction: row;
+    gap: 100px;
   }
 }
 
