--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,11 +21,11 @@ $section-third-black: #343232;
 	font-family: 'Roboto Condensed', sans-serif;
 }
 .nav-bar {
-  height: 70px;
+  height: 76px;
   background: $navbar-black;
   padding: 0 20px;
   position: fixed;
-  z-index: 10;
+  z-index: 1;
   width: 100%;
   padding: inherit;
   transition: height 300ms ease-in-out;
@@ -50,7 +50,7 @@ $section-third-black: #343232;
 
 .nav-container {
   max-width: 1400px;
-  margin: 0 auto;
+  margin: 6px auto 0 auto;
 }
 
 nav {
@@ -208,6 +208,16 @@ article {
   overflow: hidden;
 }
 
+#progress  {
+  background-color: $secondary-beige;
+  height: 6px;
+  width: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
 section.second, section.fourth {
   .title {
     text-align: center;
@@ -229,11 +239,16 @@ section.second, section.fourth {
 }
 
 section.first {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   padding: 130px 30px 30px 30px;
 
   .text {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     .color-txt {
       color: $secondary-beige;
@@ -260,6 +275,7 @@ section.first {
     align-items: center;
     width: 60vw; 
     margin: 30px auto;
+    justify-content: center;
 
     img {
       width: 100%;
@@ -427,26 +443,49 @@ section.fourth {
     }
   }
 
-  .carousel-photos {
-    scrollbar-width: none;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: 70vw;
-    grid-gap: 0 30px;
-    justify-content: space-between;
-    cursor: pointer;
-    scroll-snap-type: none;
-    scroll-padding: 1rem;
+  // .carousel-photos {
+  //   scrollbar-width: none;
+  //   overflow-x: scroll;
+  //   overflow-y: hidden;
+  //   display: grid;
+  //   grid-auto-flow: column;
+  //   grid-auto-columns: 70vw;
+  //   grid-gap: 0 30px;
+  //   justify-content: space-between;
+  //   cursor: pointer;
+  //   scroll-snap-type: none;
+  //   scroll-padding: 1rem;
 
-    img {
-      scroll-snap-align: center;
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
+  //   img {
+  //     scroll-snap-align: center;
+  //     object-fit: cover;
+  //     width: 100%;
+  //     height: 100%;
+  //   }
+  // }
+
+  .carousel-photos {
+    display: flex;
+    overflow-x: scroll;
+    padding: 24px;
+    scroll-snap-type: x mandatory;
+    gap: 20px;
+
+    .image {
+      flex: 0 0 100%;
+      scroll-snap-align: start;
+
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
+}
+
+section.footer {
+  text-align: center;
 }
 
 
@@ -464,5 +503,12 @@ section.fourth {
         }
       }
     }
+  }
+}
+
+@media only screen and (min-width: 850px) {
+  section.first {
+    flex-direction: row;
+    gap: 100px;
   }
 }
