--- a/scss/style.scss
+++ b/scss/style.scss
@@ -506,9 +506,25 @@ section.footer {
   }
 }
 
-@media only screen and (min-width: 850px) {
+@media only screen and (min-width: 950px) {
   section.first {
     flex-direction: row;
     gap: 100px;
+  }
+}
+
+@media only screen and (min-width: 1120px) {
+  section.first {
+    .photo {
+      max-width: 30vw;
+    }
+  }
+}
+
+@media only screen and (min-width: 1480px) {
+  section.first {
+    .photo {
+      max-width: 20vw;
+    }
   }
 }
