--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .nav-container {
-  max-width: 1400px;
+  max-width: 2000px;
   margin: 6px auto 0 auto;
 }
 
@@ -232,6 +232,12 @@ article {
   z-index: 1;
 }
 
+section.first, section.second, section.third, section.fourth, .footer {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 2000px;
+}
+
 section.second .title, section.fourth .title {
   text-align: center;
   text-transform: uppercase;
@@ -306,6 +312,7 @@ section.second .cards {
   display: flex;
   flex-direction: column;
   gap: 30px;
+  justify-content: center;
 }
 section.second .cards .card-projet {
   background-color: #FBFBFB;
@@ -314,7 +321,6 @@ section.second .cards .card-projet {
   display: flex;
   flex-direction: column;
   box-shadow: 5px 5px #C0B187;
-  flex: 1;
 }
 section.second .cards .card-projet .image {
   height: 50%;
@@ -405,7 +411,7 @@ section.third .background .cta .cta-decouvrir {
 }
 
 section.fourth {
-  margin: 70px 30px;
+  padding: 70px 30px;
 }
 section.fourth .description {
   text-align: center;
@@ -441,10 +447,20 @@ section.footer {
     flex-wrap: wrap;
   }
   section.second .cards .card-projet {
-    min-height: 430px;
-    height: 430px;
+    min-height: 320px;
+    height: 320px;
+    flex-direction: row;
   }
-  section.second .cards .card-projet .description-projet {
+  section.second .cards .card-projet .image {
+    height: 100%;
+    width: 50%;
+  }
+  section.second .cards .card-projet .infos {
+    height: 70%;
+    width: 50%;
+    margin: auto;
+  }
+  section.second .cards .card-projet .infos .description-projet {
     -webkit-line-clamp: 4 !important;
   }
 }
@@ -461,7 +477,7 @@ section.footer {
 }
 @media only screen and (min-width: 1480px) {
   section.first .photo {
-    max-width: 20vw;
+    max-width: 450px;
   }
 }
 
