--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,7 +49,7 @@ $section-third-black: #343232;
 }
 
 .nav-container {
-  max-width: 1400px;
+  max-width: 2000px;
   margin: 6px auto 0 auto;
 }
 
@@ -218,6 +218,12 @@ article {
   z-index: 1;
 }
 
+section.first, section.second, section.third, section.fourth, .footer {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 2000px;
+}
+
 section.second, section.fourth {
   .title {
     text-align: center;
@@ -311,6 +317,7 @@ section.second {
     display: flex;
     flex-direction: column;
     gap: 30px;
+    justify-content: center;
 
     .card-projet {
       background-color: #FBFBFB;
@@ -319,7 +326,7 @@ section.second {
       display: flex;
       flex-direction: column;
       box-shadow: 5px 5px #C0B187;
-      flex: 1;
+      // flex: 1;
 
 
       .image {
@@ -433,7 +440,7 @@ section.third {
 }
 
 section.fourth {
-  margin: 70px 30px;
+  padding: 70px 30px;
 
   .description {
     text-align: center;
@@ -493,14 +500,27 @@ section.footer {
   section.second {
     .cards {
       flex-direction: row;
-      flex-wrap: wrap;
-      .card-projet {
-        min-height: 430px;
-        height: 430px;
-        .description-projet {
-          -webkit-line-clamp: 4 !important;
+      flex-wrap: wrap;    
 
+      .card-projet {
+        min-height: 320px;
+        height: 320px;
+        flex-direction: row;
+
+        .image {
+          height: 100%;
+          width: 50%;
         }
+
+        .infos {
+          height: 70%;
+          width: 50%;
+          margin: auto;
+          .description-projet {
+            -webkit-line-clamp: 4 !important;
+          }
+        }
+        
       }
     }
   }
@@ -524,7 +544,7 @@ section.footer {
 @media only screen and (min-width: 1480px) {
   section.first {
     .photo {
-      max-width: 20vw;
+      max-width: 450px;
     }
   }
 }
