--- a/scss/style.scss
+++ b/scss/style.scss
@@ -506,6 +506,7 @@ section.footer {
         min-height: 320px;
         height: 320px;
         flex-direction: row;
+        width: calc(100vw / 2 - 55px);
 
         .image {
           height: 100%;
@@ -547,4 +548,22 @@ section.footer {
       max-width: 450px;
     }
   }
+}
+
+@media only screen and (min-width: 1701px) and (max-width: 1999px) {
+  section.second {
+      .card-projet {
+        width: calc(100vw / 3 - 40px) !important;
+      }
+    }
+
+}
+
+@media only screen and (min-width: 2000px) {
+  section.second {
+      .card-projet {
+        width: calc(2000px / 4 - 40px) !important;
+      }
+    }
+
 }
