--- a/scss/style.scss
+++ b/scss/style.scss
@@ -409,6 +409,8 @@ section.third {
   .background {
     background-color: $section-third-black;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
 
     .title {
       text-align: center;
@@ -536,6 +538,28 @@ section.footer {
 
     .voir-plus {
       display: none;
+    }
+  }
+
+
+  section.third {
+    .background {
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      // padding: 20px 5rem;
+      gap: 50px;
+
+      .titre-presentation {
+        .title, .presentation {
+          text-align: left;
+        }
+      }
+
+      .cta {
+        margin: inherit;
+      }
+
     }
   }
 }
