--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,7 +25,7 @@ $section-third-black: #343232;
   background: $navbar-black;
   padding: 0 20px;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   width: 100%;
   padding: inherit;
   transition: height 300ms ease-in-out;
@@ -457,33 +457,13 @@ section.fourth {
     }
   }
 
-  // .carousel-photos {
-  //   scrollbar-width: none;
-  //   overflow-x: scroll;
-  //   overflow-y: hidden;
-  //   display: grid;
-  //   grid-auto-flow: column;
-  //   grid-auto-columns: 70vw;
-  //   grid-gap: 0 30px;
-  //   justify-content: space-between;
-  //   cursor: pointer;
-  //   scroll-snap-type: none;
-  //   scroll-padding: 1rem;
-
-  //   img {
-  //     scroll-snap-align: center;
-  //     object-fit: cover;
-  //     width: 100%;
-  //     height: 100%;
-  //   }
-  // }
-
   .carousel-photos {
     display: flex;
     overflow-x: scroll;
     padding: 24px;
-    scroll-snap-type: x mandatory;
+    // scroll-snap-type: x mandatory;
     gap: 20px;
+    cursor: pointer;
 
     .image {
       flex: 0 0 100%;
@@ -494,7 +474,26 @@ section.fourth {
         width: 100%;
         height: 100%;
       }
+
+      .voir-plus {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+        a {
+          color: $primary-white;
+          text-decoration: underline;
+          font-size: 1.2rem;
+        }
+      }
+
     }
+
+    .plus {
+      max-width: 12rem !important;
+    }
+
   }
 }
 
@@ -502,6 +501,18 @@ section.footer {
   text-align: center;
 }
 
+
+@media only screen and (min-width: 425px) {
+  section.fourth {
+    .carousel-photos {
+      justify-content: space-between;
+
+      .image {
+        max-width: 18rem;
+      }
+    }
+  }
+}
 
 @media only screen and (min-width: 780px) {
   section.second {
