--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ section.third {
 }
 section.third .background {
   background-color: #343232;
-  padding: 20px;
+  padding: 20px 30px;
   display: flex;
   flex-direction: column;
 }
@@ -501,7 +501,7 @@ section.footer {
 
   section.third .background {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     gap: 50px;
   }
