--- a/css/style.css
+++ b/css/style.css
@@ -460,6 +460,7 @@ section.fourth .carousel-photos {
   gap: 20px;
   margin: 0 auto;
   width: 100%;
+  scroll-behavior: smooth;
 }
 section.fourth .carousel-photos .image {
   flex: 0 0 100%;
