--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,36 @@ section.first .text .little-text {
 section.first .text .little-text h2 {
   font-size: 1rem;
 }
+section.first .text .chiffres-moi {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  max-width: 60vw;
+  margin: 50px auto;
+  gap: 50px;
+  flex-wrap: wrap;
+}
+section.first .text .chiffres-moi .chiffre {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 210px;
+  gap: 10px;
+}
+section.first .text .chiffres-moi .chiffre .counter-number {
+  font-size: 2.5rem;
+  color: #C0B187;
+}
+section.first .text .chiffres-moi .chiffre .icon-txt {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  gap: 10px;
+}
+section.first .text .chiffres-moi .chiffre .icon-txt img {
+  width: 35px;
+  height: 35px;
+}
 section.first .photo {
   display: flex;
   flex-direction: column;
@@ -500,6 +530,10 @@ section.footer {
   }
 }
 @media only screen and (min-width: 780px) {
+  section.first .text .chiffres-moi .chiffre .icon-txt {
+    flex-direction: row;
+  }
+
   section.second .cards {
     flex-direction: row;
     flex-wrap: wrap;
