--- a/css/style.css
+++ b/css/style.css
@@ -113,59 +113,6 @@ nav ul li ul li a {
   width: 70px;
 }
 
-@media only screen and (max-width: 850px) {
-  .full-height-nav {
-    height: 100vh;
-    transition: height 300ms ease-in-out;
-  }
-
-  .nav-list {
-    padding: 40px 0;
-    height: calc(100vh - 70px);
-    overflow: scroll;
-  }
-
-  .nav-mobile {
-    display: block;
-  }
-
-  nav {
-    width: 100%;
-    padding: 70px 0 15px;
-  }
-
-  nav ul {
-    display: none;
-  }
-
-  nav ul li {
-    float: none;
-  }
-
-  nav ul li a {
-    padding: 15px;
-    line-height: 40px;
-    padding-left: 10%;
-    text-transform: uppercase;
-  }
-
-  nav ul li ul li a {
-    padding-left: 20%;
-  }
-
-  .nav-dropdown {
-    position: static;
-  }
-
-  .brand a img {
-    max-height: 50px;
-  }
-}
-@media screen and (min-width: 851px) {
-  .nav-list {
-    display: block !important;
-  }
-}
 #nav-toggle {
   position: absolute;
   left: 18px;
@@ -326,7 +273,10 @@ section.first .photo .disponibilite {
   margin-top: 20px;
 }
 section.first .photo .disponibilite .cercle {
-  background-color: #18c618;
+  background-color: #2A2828;
+  animation-name: disponibilite;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
   width: 17px;
   height: 17px;
   border-radius: 50%;
@@ -521,6 +471,59 @@ section.footer {
   text-align: center;
 }
 
+@media only screen and (max-width: 850px) {
+  .full-height-nav {
+    height: 100vh;
+    transition: height 300ms ease-in-out;
+  }
+
+  .nav-list {
+    padding: 40px 0;
+    height: calc(100vh - 70px);
+    overflow: scroll;
+  }
+
+  .nav-mobile {
+    display: block;
+  }
+
+  nav {
+    width: 100%;
+    padding: 70px 0 15px;
+  }
+
+  nav ul {
+    display: none;
+  }
+
+  nav ul li {
+    float: none;
+  }
+
+  nav ul li a {
+    padding: 15px;
+    line-height: 40px;
+    padding-left: 10%;
+    text-transform: uppercase;
+  }
+
+  nav ul li ul li a {
+    padding-left: 20%;
+  }
+
+  .nav-dropdown {
+    position: static;
+  }
+
+  .brand a img {
+    max-height: 50px;
+  }
+}
+@media screen and (min-width: 851px) {
+  .nav-list {
+    display: block !important;
+  }
+}
 @media only screen and (min-width: 425px) {
   section.fourth .carousel-photos {
     justify-content: space-between;
@@ -608,6 +611,17 @@ section.footer {
 @media only screen and (min-width: 2000px) {
   section.second .card-projet {
     width: calc(2000px / 4 - 40px) !important;
+  }
+}
+@keyframes disponibilite {
+  0% {
+    background-color: #2A2828;
+  }
+  50% {
+    background-color: #2dd92d;
+  }
+  100% {
+    background-color: #2A2828;
   }
 }
 
