--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,7 @@ section.first .text .big-text h1 {
 }
 section.first .text .little-text {
   padding: 20px 0;
+  min-height: 6rem;
 }
 section.first .text .little-text h2 {
   font-size: 1rem;
