test bind pour carousel tablette

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -451,10 +451,10 @@ section.fourth {
 
   .images {
 
-    // -webkit-user-select: none;  
-    // -moz-user-select: none;    
-    // -ms-user-select: none;      
-    // user-select: none;
+    -webkit-user-select: none;  
+    -moz-user-select: none;    
+    -ms-user-select: none;      
+    user-select: none;
     margin: 3rem 0;
     display: flex;
     align-items: center;
