--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,10 @@ section.fourth .description h2 {
   font-size: 1rem;
 }
 section.fourth .images {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   margin: 3rem 0;
   display: flex;
   align-items: center;
